--- a/app/views/app.scala.html
+++ b/app/views/app.scala.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="myApp">
     <head>
-        <title>Salesforce Webhook Creator</title>
+        <title>SFDC Webhook Creator</title>
         <link rel='stylesheet' href='@staticWebJarAssets.url(webJarAssets.locate("css/bootstrap.min.css"))'>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
@@ -19,7 +19,7 @@
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Salesforce Webhook Creator</a>
+                    <a class="navbar-brand" href="#">SFDC Webhook Creator</a>
                 </div>
                 <a href="@routes.Application.logout()" class="navbar-btn btn btn-default pull-right">Logout</a>
             </div>
